8140659: C1: invokedynamic call patching violates JVMS-6.5.invokedynamic

Reviewed-by: roland